--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donate Today</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Donate Page</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
+    <section class="header-area">
+        <div class="header-text-area">
+            <h1>Let’s Help Those Who Are More In Need</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+            <a class="donet-button" href="#" target="_blank">Donate Now</a>
+        </div>
+    </section>
 </body>
 
 </html>
