Donate Day Area

--- a/index.html
+++ b/index.html
@@ -21,6 +21,23 @@
             <a class="donet-button" href="#" target="_blank">Donate Now</a>
         </div>
     </section>
+    <section class="donate-day-area">
+        <div class="donet-text-area">
+            <h1>Donate Today</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+            <ul>
+                <li>100tk</li>
+                <li class="taka-color">200tk</li>
+                <li>500tk</li>
+                <li>1000tk</li>
+                <li>5000tk</li>
+            </ul>
+            <input type="text" placeholder="Other Amount (Taka)">
+            <hr>
+            <a class="donet-button" href="#" target="_blank">Donate Now</a>
+        </div>
+    </section>
 </body>
 
 </html>
