Donate Plan Area

--- a/index.html
+++ b/index.html
@@ -38,6 +38,34 @@
             <a class="donet-button" href="#" target="_blank">Donate Now</a>
         </div>
     </section>
+    <section class="donate-plan-area">
+        <div class="donet-plan-text-area">
+            <h1>Our Donate Plan</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+        </div>
+        <div class="donate-plan-item">
+            <div class="donate-plan-item-width" id="item-width-one">
+                <img src="icons/food.png" alt="">
+                <h3>Food for a family</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+            <div class="donate-plan-item-width" id="item-width-two">
+                <img src="icons/shelter.png" alt="">
+                <h3>Shelter for a family</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+            <div class="donate-plan-item-width" id="item-width-three">
+                <img src="icons/education.png" alt="">
+                <h3>Education for a child</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                    consequat
+                    duis enim velit mollit.</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
