--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <h1>Let’s Help Those Who Are More In Need</h1>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
                 animal noluisse, enim</p>
-            <a class="donet-button" href="#" target="_blank">Donate Now</a>
+            <a class="donate-button" href="#" target="_blank">Donate Now</a>
         </div>
     </section>
     <section class="donate-day-area">
-        <div class="donet-text-area">
+        <div class="donate-text-area">
             <h1>Donate Today</h1>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
                 animal noluisse, enim</p>
@@ -35,11 +35,11 @@
             </ul>
             <input type="text" placeholder="Other Amount (Taka)">
             <hr>
-            <a class="donet-button" href="#" target="_blank">Donate Now</a>
+            <a class="donate-button" href="#" target="_blank">Donate Now</a>
         </div>
     </section>
     <section class="donate-plan-area">
-        <div class="donet-plan-text-area">
+        <div class="donate-plan-text-area">
             <h1>Our Donate Plan</h1>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
                 animal noluisse, enim</p>
@@ -63,6 +63,45 @@
                 <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
                     consequat
                     duis enim velit mollit.</p>
+            </div>
+        </div>
+    </section>
+    <section class="donate-qurbani-area">
+        <div class="donate-qurbani-text-area">
+            <h1>Donate your Qurbani and fulfil your obligation</h1>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                duis enim velit mollit.</p>
+        </div>
+        <div class="donate-qurbani-item-area">
+            <div class="qurbani-item-width">
+                <img src="icons/hot-line.png" alt="">
+                <h2>Donation Hotline</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+                <h3> <a href="#" target="_blank">CALL 03000 999 888</a></h3>
+                <hr>
+            </div>
+            <div class="qurbani-item-width">
+                <img src="icons/bank.png" alt="">
+                <h2>Donate by Bank Transfer
+                </h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+                <ul>
+                    <li><strong>Name:</strong> Save an Orphan</li>
+                    <li><strong>Sort Code:</strong> 30-00-83</li>
+                    <li><strong>Account number:</strong> 01342201</li>
+                </ul>
+                <h3><a href="#" target="_blank">DONATE VIA BACS</a></h3>
+                <hr>
+            </div>
+            <div class="qurbani-item-width">
+                <img src="icons/fundraising.png" alt="">
+                <h2>Fundraise for us </h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+                <h3><a href="#" target="_blank">BECOME A FUNDRAISER</a></h3>
+                <hr>
             </div>
         </div>
     </section>
