--- a/index.html
+++ b/index.html
@@ -105,6 +105,18 @@
             </div>
         </div>
     </section>
+    <section class="subscribe-area">
+        <div>
+            <h1>Get My Updates</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+        </div>
+        <div class="subscribe-input-area">
+            <input type="email" placeholder="Email" id="email">
+            <input type="button" value="Subscribe" id="button">
+
+        </div>
+    </section>
 </body>
 
 </html>
